feat: adds score resources
