# app/rest/server.go
@@ -15,7 +15,7 @@ import (
 
 // @title Loyalty Card Swagger API
 // @version 1.0
-// @description Swagger API for Guest Service.
+// @description Swagger API for Loyalty Card Service.
 // @termsOfService http://swagger.io/terms/
 
 // @contact.name Coding4u
@@ -27,11 +27,11 @@ import (
 // @securityDefinitions.apikey ApiKeyAuth
 // @in header
 // @name Authorization
-func StartRestServer(pg *db.PostgreSQL, port int) {
+func StartRestServer(orm *db.DbOrm, port int) {
 	r := fiber.New()
 	r.Use(cors.New())
 
-	repository := repo.NewRepository(pg)
+	repository := repo.NewRepository(orm)
 	service := service.NewService(repository)
 	restService := NewRestService(service)
 
@@ -43,6 +43,11 @@ func StartRestServer(pg *db.PostgreSQL, port int) {
 		guest := v1.Group("/guests")
 		guest.Post("", restService.CreateGuest)
 		guest.Get("/:guest_id", restService.FindGuest)
+
+		score := v1.Group("/scores")
+		score.Post("", restService.CreateScore)
+		score.Get("/:score_id", restService.FindScore)
+		score.Post("/:score_id/use", restService.UseScore)
 	}
 
 	addr := fmt.Sprintf("0.0.0.0:%d", port)
